# hammy

./: .gitignore  README.md  pyproject.toml
hammy/: __init__.py  __main__.py  config.py  core.py  llm.py  models.yaml  prompt.txt  setup_wizard.py  transcribe.py  ui.py  updater.py
tests/: conftest.py  test_cli.py  test_end_to_end.py  test_errors.py  test_file_discovery.py  test_llm_detection.py  test_llm_structuring.py  test_output.py  test_skip_resume.py  test_transcription.py  test_ui.py
